[package]
name = "surf-cookie-middleware"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "surf cookie middleware, does what it says on the tin"
keywords = ["surf", "cookies", "middleware"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/surf-cookie-middleware"

[dependencies]
log = "0.4.11"
async-std = "1.6"
serde_json = "1.0.59"
async-dup = "1.2.2"

[dependencies.surf]
version = "2.0"
default-features = false

[dependencies.cookie_store]
version = "0.12"
features = ["preserve_order"]

[dev-dependencies]
tide-testing = "0.1"
serde_json = "1.0.59"

[dev-dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies.tide]
version = "0.14"
default-features = false

[dev-dependencies.surf]
version = "2.0.0"
default-features = true
