[package]
name = "surf-cookie-middleware"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "surf cookie middleware, does what it says on the tin"
keywords = ["surf", "cookies", "middleware"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/surf-cookie-middleware"

[dependencies]
log = "0.4"
async-std = "1.9"
serde_json = "1.0"
async-dup = "1.2"
tempfile = "3.2"
surf = "2.2"

[dependencies.cookie_store]
version = "0.15"
features = ["preserve_order"]

[dev-dependencies]
tide-testing = "0.1"
tide = "0.16"

[dev-dependencies.async-std]
version = "1.9"
features = ["attributes"]
