[package]
name = "surf-cookie-middleware"
version = "0.3.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "surf cookie middleware, does what it says on the tin"
keywords = ["surf", "cookies", "middleware"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/surf-cookie-middleware"

[dependencies]
log = "0.4.14"
async-std = "1.9.0"
serde_json = "1.0.66"
async-dup = "1.2.2"
tempfile = "3.2.0"

[dependencies.surf]
version = "2.3.1"
default-features = false

[dependencies.cookie_store]
version = "0.15.0"
features = ["preserve_order"]

[dev-dependencies]
tide-testing = "0.1.3"
serde_json = "1.0.66"

[dev-dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dev-dependencies.tide]
version = "0.16.0"
default-features = false
features = ["cookies"]

[dev-dependencies.surf]
version = "2.3.1"
default-features = true
